--- a/src/CZ.Azure.FileExchange/wwwroot/index.html
+++ b/src/CZ.Azure.FileExchange/wwwroot/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>CZ.Azure.FileExchange</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="client/main.css" rel="stylesheet" />
     <link href="CZ.Azure.FileExchange.styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="splash">
+            <div class="loading">
+                <h3>Loading...</h3>
+            </div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -20,6 +25,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="client/main.js" type="module"></script>
 </body>
 
 </html>
