--- a/src/CZ.Azure.FileExchange/wwwroot/index.html
+++ b/src/CZ.Azure.FileExchange/wwwroot/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>CZ.Azure.FileExchange</title>
+    <title>Azure File Exchange</title>
     <base href="/" />
     <link href="client/main.css" rel="stylesheet" />
-    <link href="CZ.Azure.FileExchange.styles.css" rel="stylesheet" />
 </head>
 
 <body>
