--- a/src/CZ.Azure.FileExchange/wwwroot/index.html
+++ b/src/CZ.Azure.FileExchange/wwwroot/index.html
@@ -11,11 +11,12 @@
 
 <body>
     <div id="app">
-        <div class="splash">
-            <div class="loading">
-                <h3>Loading...</h3>
-            </div>
-        </div>
+        <header>
+            <h1>Azure File Exchange</h1>
+            <nav>
+                <span>Loading...</span>
+            </nav>
+        </header>
     </div>
 
     <div id="blazor-error-ui">
