--- a/src/CZ.Azure.FileExchange/wwwroot/index.html
+++ b/src/CZ.Azure.FileExchange/wwwroot/index.html
@@ -7,15 +7,14 @@
     <title>Azure File Exchange</title>
     <base href="/" />
     <link href="client/main.css" rel="stylesheet" />
+    <link href="CZ.Azure.FileExchange.styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="app">
         <header>
             <h1>Azure File Exchange</h1>
-            <nav>
-                <span>Loading...</span>
-            </nav>
+            <p>Loading...</p>
         </header>
     </div>
 
